GP-17 Вторая часть модуля решателя задачи
